# BastowSynth.V2

./: .gitignore  CMakeLists.txt  README.md
Source/: BASPluginProcessor.cpp  BASPluginProcessor.h  CMakeLists.txt  ParamId.h  PluginEditor.cpp  PluginEditor.h
Source/ADSR/: ADSR.cpp  ADSR.h  CMakeLists.txt  Ramp.cpp  Ramp.h
Source/Components/: CMakeLists.txt
Source/Components/ADSRComponent/: ADSR_Component1.cpp  ADSR_Component1.h  CMakeLists.txt
Source/Components/MainComponents/: M_Component1.cpp  M_Component1.h
Source/Components/VolumeComponents/: CMakeLists.txt  V_Component1.cpp  V_Component1.h  V_Component2.cpp  V_Component2.h  V_Component3.cpp  V_Component3.h
Source/DSP/: Osc.h  WaveGen.cpp  WaveGen.h  WaveSetup.cpp  WaveSetup.h
Source/LAF/: ADSRsLAF.cpp  ADSRsLAF.h  CMakeLists.txt  CustomButton.cpp  CustomButton.h  FreqAProp.cpp  FreqAProp.h  FreqSLAF.cpp  GainSLAF.cpp
